--- a/webview-ui/chat.html
+++ b/webview-ui/chat.html
@@ -19,13 +19,6 @@
             <span>İvme</span>
         </div>
         <div class="header-actions">
-            <button id="history-button" class="icon-button" title="Konuşma Geçmişi">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"><path d="M1.5 2.5a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1h-13Zm0 5a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1h-13Zm0 5a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1h-13Z"/></svg>
-            </button>
-            <button id="new-chat-button" class="icon-button" title="Yeni Konuşma">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"><path d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z"/></svg>
-            </button>
-            
             <div class="toggle-switch-container" title="Animasyon Efektini Değiştir">
                 <label for="effect-toggle-switch" class="toggle-label">Diffusion Effect</label>
                 <label class="switch">
@@ -33,9 +26,20 @@
                     <span class="slider round"></span>
                 </label>
             </div>
-            
+
+            <button id="history-button" class="icon-button" title="Konuşma Geçmişi">
+                <img src="{{history_icon_uri}}" alt="Konuşma Geçmişi"/>
+            </button>
+            <button id="new-chat-button" class="icon-button" title="Yeni Konuşma">
+                <img src="{{new_chat_icon_uri}}" alt="Yeni Konuşma"/>
+            </button>
+
+            <button id="feedback-button" class="icon-button" title="Geri Bildirim">
+                <img src="{{feedback_icon_uri}}" alt="Geri Bildirim"/>
+            </button>
+
             <button id="settings-button" class="icon-button" title="Ayarlar">
-                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor"><path d="M10.5 5a.5.5 0 0 0-1 0v.784a3.003 3.003 0 0 0-4.993 0V5a.5.5 0 0 0-1 0v.784a3.003 3.003 0 0 0-1.28 1.483.5.5 0 0 0 .866.502A2.002 2.002 0 0 1 8 6.5a2.002 2.002 0 0 1 3.907 1.269.5.5 0 0 0 .866-.502A3.003 3.003 0 0 0 10.5 5.784V5Zm1.28 5.517a3.003 3.003 0 0 0-1.28-1.483.5.5 0 0 0-.866.502A2.002 2.002 0 0 1 8 10.8a2.002 2.002 0 0 1-3.907-1.269.5.5 0 0 0-.866-.502A3.003 3.003 0 0 0 2.5 9.216V11a.5.5 0 0 0 1 0v-.784a3.003 3.003 0 0 0 4.993 0V11a.5.5 0 0 0 1 0v-.784a3.003 3.003 0 0 0 1.28-1.483Z"/></svg>
+                <img src="{{settings_icon_uri}}" alt="Ayarlar"/>
             </button>
         </div>
     </header>
